--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-map"></i>
               <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>11 balden pl apt 210, New York, NY 535022</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -123,7 +123,7 @@
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-telephone"></i>
               <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <p>+1 (415)619-2284</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -178,10 +178,10 @@
             <div class="footer-info">
               <h3>ApMaintenances</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                11 balden pl apt 210 <br>
+                CA 94118, USA<br><br>
+                <strong>Phone:</strong> +1 (415)619-2284<br>
+                <strong>Email:</strong> douglasjanky93@gmail.com<br>
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
