--- a/project-details.html
+++ b/project-details.html
@@ -196,10 +196,10 @@
             <div class="footer-info">
               <h3>ApMaintenances</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                11 balden pl apt 210 <br>
+                CA 94118, USA<br><br>
+                <strong>Phone:</strong> +1 (415)619-2284<br>
+                <strong>Email:</strong> douglasjanky93@gmail.com<br>
               </p>
               <div class="social-links d-flex mt-3">
                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
