--- a/services.html
+++ b/services.html
@@ -156,7 +156,7 @@
               <div class="icon">
                 <i class="fa-solid fa-hammer"></i>
               </div>
-              <h3>general maintenance</h3>
+              <h3>General maintenance</h3>
               <p>At our company, we understand the importance of caring for and preserving your home or building, both in terms of functionality and aesthetics. That's why we are committed to providing a wide range of maintenance services ranging from electrical and plumbing work to painting, door and floor repairs, and general cleaning.</p>
             </div>
           </div><!-- End Service Item -->
