--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-    <link href="assets/img/favicon.JPEG" rel="icon">
-  <link href="assets/img/favicon.JPEG" rel="apple-touch-icon">
+  <link href="./assets/img/favicon.JPEG" rel="icon">
+  <link href="./assets/img/favicon.JPEG" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
