--- a/index.html
+++ b/index.html
@@ -459,47 +459,47 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-bathroom">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/projects/baño-1.jpg" class="img-fluid" alt="">
+                <img src="./assets/img/projects/bano-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Bathroom 1</h4>
-                  <a href="./assets/img/projects/baño-1.jpg" title="Bathroom 1" data-gallery="portfolio-gallery-Bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./assets/img/projects/bano-1.jpg" title="Bathroom 1" data-gallery="portfolio-gallery-Bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-bathroom">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/projects/baño-2.jpg" class="img-fluid" alt="">
+                <img src="./assets/img/projects/bano-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Bathroom 2</h4>
-                  <a href="./assets/img/projects/baño-2.jpg" title="Bathroom 2" data-gallery="portfolio-gallery-Bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./assets/img/projects/bano-2.jpg" title="Bathroom 2" data-gallery="portfolio-gallery-Bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">   <div class="portfolio-content h-100">
-                <img src="./assets/img/projects/cocina-1.jpg" class="img-fluid" alt="">
+                <img src="./assets/img/projects/kitchen-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kitchen 1</h4>
-                  <a href="./assets/img/projects/cocina-1.jpg" title="Kitchen 1" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./assets/img/projects/kitchen-1.jpg" title="Kitchen 1" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">   <div class="portfolio-content h-100">
-              <img src="./assets/img/projects/cocina-2.jpg" class="img-fluid" alt="">
+              <img src="./assets/img/projects/kitchen-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Kitchen 2</h4>
-                <a href="./assets/img/projects/cocina-2.jpg" title="Kitchen 2" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="./assets/img/projects/kitchen-2.jpg" title="Kitchen 2" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               </div>
             </div>
           </div><!-- End Projects Item -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">   <div class="portfolio-content h-100">
-            <img src="./assets/img/projects/cocina-3.jpg" class="img-fluid" alt="">
+            <img src="./assets/img/projects/kitchen-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Kitchen 3</h4>
-              <a href="./assets/img/projects/cocina-3.jpg" title="Kitchen 3" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="./assets/img/projects/kitchen-3.jpg" title="Kitchen 3" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
             </div>
           </div>
         </div><!-- End Projects Item -->
