--- a/index.html
+++ b/index.html
@@ -448,9 +448,10 @@
 
           <ul class="portfolio-flters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-floors">Floors</li>
+ 
             <li data-filter=".filter-kitchen">Kitchen</li>
             <li data-filter=".filter-bathroom">Bathroom</li>
+            <li data-filter=".filter-floors">Floors</li>
             <li data-filter=".filter-electricity">Electricity</li>
             <li data-filter=".filter-plumbing">Plumbing</li>
           </ul><!-- End Projects Filters -->
@@ -459,50 +460,54 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-bathroom">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/projects/bano-1.jpg" class="img-fluid" alt="">
+                <img src="./assets/img/projects/bano-1.JPG" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Bathroom 1</h4>
-                  <a href="./assets/img/projects/bano-1.jpg" title="Bathroom 1" data-gallery="portfolio-gallery-Bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./assets/img/projects/bano-1.JPG" title="Bathroom 1" data-gallery="portfolio-gallery-bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-bathroom">
               <div class="portfolio-content h-100">
-                <img src="./assets/img/projects/bano-2.jpg" class="img-fluid" alt="">
+                <img src="./assets/img/projects/bano-2.JPG" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Bathroom 2</h4>
-                  <a href="./assets/img/projects/bano-2.jpg" title="Bathroom 2" data-gallery="portfolio-gallery-Bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./assets/img/projects/bano-2.JPG" title="Bathroom 2" data-gallery="portfolio-gallery-bathroom" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">   <div class="portfolio-content h-100">
-                <img src="./assets/img/projects/kitchen-1.jpg" class="img-fluid" alt="">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/projects/kitchen-1.JPG" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Kitchen 1</h4>
-                  <a href="./assets/img/projects/kitchen-1.jpg" title="Kitchen 1" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="./assets/img/projects/kitchen-1.JPG" title="Kitchen 1" data-gallery="portfolio-gallery-kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 </div>
               </div>
             </div><!-- End Projects Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">   <div class="portfolio-content h-100">
-              <img src="./assets/img/projects/kitchen-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Kitchen 2</h4>
-                <a href="./assets/img/projects/kitchen-2.jpg" title="Kitchen 2" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/projects/kitchen-2.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Kitchen 2</h4>
+                  <a href="./assets/img/projects/kitchen-2.JPG" title="Kitchen 2" data-gallery="portfolio-gallery-kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
               </div>
-            </div>
-          </div><!-- End Projects Item -->
+            </div><!-- End Projects Item -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">   <div class="portfolio-content h-100">
-            <img src="./assets/img/projects/kitchen-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Kitchen 3</h4>
-              <a href="./assets/img/projects/kitchen-3.jpg" title="Kitchen 3" data-gallery="portfolio-gallery-Kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            </div>
-          </div>
-        </div><!-- End Projects Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-kitchen">
+              <div class="portfolio-content h-100">
+                <img src="./assets/img/projects/kitchen-3.JPG" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Kitchen 3</h4>
+                  <a href="./assets/img/projects/kitchen-3.JPG" title="Kitchen 3" data-gallery="portfolio-gallery-kitchen" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                </div>
+              </div>
+            </div><!-- End Projects Item -->
+         
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-electricity">
               <div class="portfolio-content h-100">
