--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
             <div class="info-item  d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-map"></i>
               <h3>Our Address</h3>
-              <p>11 balden pl apt 210, CA 94118, USA</p>
+              <p>11 belden pl apt 210, CA 94118, USA</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -139,7 +139,7 @@
             <div class="footer-info">
               <h3>ApMaintenances</h3>
               <p>
-                11 balden pl apt 210 <br>
+                11 belden pl apt 210 <br>
                 CA 94118, USA<br><br>
                 <strong>Phone:</strong> +1 (415)619-2284<br>
                 <strong>Email:</strong> douglasjanky93@gmail.com<br>
