--- a/projects.html
+++ b/projects.html
@@ -351,7 +351,7 @@
             <div class="footer-info">
               <h3>ApMaintenances</h3>
               <p>
-                11 balden pl apt 210 <br>
+                11 belden pl apt 210 <br>
                 CA 94118, USA<br><br>
                 <strong>Phone:</strong> +1 (415)619-2284<br>
                 <strong>Email:</strong> douglasjanky93@gmail.com<br>
