--- a/about.html
+++ b/about.html
@@ -82,13 +82,13 @@
           <div class="col-lg-7 about-img" style="background-image: url(assets/img/about.jpg);"></div>
 
           <div class="col-lg-7">
-            <h2>Excellence is our goal.</h2>
+            <h2>Excellence is our goal</h2>
             <div class="our-story">
               <h3>About Us</h3>
               <p>We are a company dedicated to providing comprehensive maintenance services for houses and buildings. With more than 8 years of experience in the field, we are proud to offer a wide range of services to transform your home into a renewed and functional space. we specialize in various aspects of maintenance, including electrical, plumbing, drywall, painting, doors, flooring, and building cleaning.</p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>We complete projects in the shortest time possible</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>We have the best quality in workmanship</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>We complete projects in the shortest time possible.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>We have the best quality in workmanship.</span></li>
                 <li><i class="bi bi-check-circle"></i> <span>We comply succesfully all your requirements.</span></li>
               </ul>
             </div>
@@ -159,7 +159,7 @@
           <div class="col-lg-6 img-bg" style="background-image: url(assets/img/alt-services.jpg);" data-aos="zoom-in" data-aos-delay="100"></div>
 
           <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <h3>Our mission is.</h3>
+            <h3>Our mission is</h3>
             <p>Provide comprehensive and high-quality solutions in the field of maintenance and improvement of houses and buildings, guaranteeing customer satisfaction, the safety of the facilities and the creation of functional, aesthetically pleasing and durable spaces.</p>
 
             <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
