--- a/services.html
+++ b/services.html
@@ -86,7 +86,7 @@
               <div class="icon">
                 <i class="fa-solid fa-broom"></i>
               </div>
-              <h3>cleaning</h3>
+              <h3>Cleaning</h3>
               <p>Our cleaning service for houses and buildings is the perfect solution to keep your space impeccable and in optimal conditions. </p>
             </div>
           </div><!-- End Service Item -->
