--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Favicons -->
-  <link rel="icon" type="image/x-icon" href="./assets/img/favicon.JPEG">
+  <link rel="shortcut icon" href="./assets/img/icono.jpeg" type="image/x-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
