--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="./assets/img/favicon.JPEG" rel="icon">
-  <link href="./assets/img/favicon.JPEG" rel="apple-touch-icon">
+  <link rel="shortcut icon" href="./assets/img/icono.jpeg" type="image/x-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
