--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ApMaintenances Bootstrap Template - Contact</title>
+  <title>AP BUILDING MAINTENENCE Bootstrap Template - Contact</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -29,11 +29,11 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: ApMaintenances
+  * Template Name: AP BUILDING MAINTENENCE
   * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://ApMaintenances.com/ApMaintenances-bootstrap-construction-website-template/
-  * Author: ApMaintenances.com
-  * License: https://ApMaintenances.com/license/
+  * Template URL: https://AP BUILDING MAINTENENCE.com/AP BUILDING MAINTENENCE-bootstrap-construction-website-template/
+  * Author: AP BUILDING MAINTENENCE.com
+  * License: https://AP BUILDING MAINTENENCE.com/license/
   ======================================================== -->
 </head>
 
@@ -46,7 +46,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>ApMaintenances<span>.</span></h1>
+        <h1>AP BUILDING MAINTENENCE<span>.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -136,7 +136,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>ApMaintenances</h3>
+              <h3>AP BUILDING MAINTENENCE</h3>
               <p>
                 11 belden pl apt 210 <br>
                 CA 94118, USA<br><br>
@@ -165,10 +165,10 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>ApMaintenances</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>AP BUILDING MAINTENENCE</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="https://ApMaintenances.com/">ApMaintenances</a>
+          Designed by <a href="https://AP BUILDING MAINTENENCE.com/">AP BUILDING MAINTENENCE</a>
         </div>
       </div>
     </div>
