--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ApMaintenances</title>
+  <title>AP BUILDING MAINTENENCE</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Favicons -->
@@ -37,7 +37,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>ApMaintenances<span>.</span></h1>
+        <h1>AP BUILDING MAINTENENCE<span>.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">¡Welcome to <span>ApMaintenances</span>!</h2>
+            <h2 data-aos="fade-down">¡Welcome to <span>AP BUILDING MAINTENENCE</span>!</h2>
             <p data-aos="fade-up">We are a company dedicated to providing comprehensive maintenance services for houses and buildings. With more than 8 years of experience in the field, we are proud to offer a wide range of services to transform your home into a renewed and functional space. we specialize in various aspects of maintenance, including electrical, plumbing, drywall, painting, doors, flooring, and building cleaning.</p>
           </div>
         </div>
@@ -98,7 +98,7 @@
         <div class="section-header">
           <h2>YOUR BEST CHOICE</h2>
           <p>
-            More than 200 projects completed in ApMaintenances - With over 8 years of experience, we have the knowledge to satisfy your needs.
+            More than 200 projects completed in AP BUILDING MAINTENENCE - With over 8 years of experience, we have the knowledge to satisfy your needs.
 
           </p>
         </div>
@@ -148,7 +148,7 @@
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
                     <h4 class="card-title">Best quality</h4>
-                    <p>ApMaintenances is committed to reach the highest quality expectations, without affecting compliance with working time.</p>
+                    <p>AP BUILDING MAINTENENCE is committed to reach the highest quality expectations, without affecting compliance with working time.</p>
                   </div>
                 </div>
               </div>
@@ -182,7 +182,7 @@
 
         <div class="section-header">
           <h2>Services</h2>
-          <p>ApMaintenances offers a full range of remodeling services, from initial design to completion.</p>
+          <p>AP BUILDING MAINTENENCE offers a full range of remodeling services, from initial design to completion.</p>
         </div>
 
         <div class="row gy-4">
@@ -717,7 +717,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>ApMaintenances</h3>
+              <h3>AP BUILDING MAINTENENCE</h3>
               <p>
                 11 belden pl apt 210 <br>
                 CA 94118, USA<br><br>
@@ -746,10 +746,10 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>ApMaintenances</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>AP BUILDING MAINTENENCE</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="https://ApMaintenances.com/">ApMaintenances</a>
+          Designed by <a href="https://AP BUILDING MAINTENENCE.com/">AP BUILDING MAINTENENCE</a>
         </div>
       </div>
     </div>
