--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ApMaintenances Bootstrap Template - Projects</title>
+  <title>AP BUILDING MAINTENENCE Bootstrap Template - Projects</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,7 +37,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1>ApMaintenances<span>.</span></h1>
+        <h1>AP BUILDING MAINTENENCE<span>.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -352,7 +352,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>ApMaintenances</h3>
+              <h3>AP BUILDING MAINTENENCE</h3>
               <p>
                 11 belden pl apt 210 <br>
                 CA 94118, USA<br><br>
@@ -381,10 +381,10 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>ApMaintenances</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>AP BUILDING MAINTENENCE</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="https://ApMaintenances.com/">ApMaintenances</a>
+          Designed by <a href="https://AP BUILDING MAINTENENCE.com/">AP BUILDING MAINTENENCE</a>
         </div>
       </div>
     </div>
