--- a/services.html
+++ b/services.html
@@ -251,7 +251,7 @@
           &copy; Copyright <strong><span>AP BUILDING MAINTENENCE</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="https://AP BUILDING MAINTENENCE.com/">AP BUILDING MAINTENENCE</a>
+          Designed by <span class="title-footer">AP BUILDING MAINTENENCE</a>
         </div>
       </div>
     </div>
